<resources>
    <string name="cts_app_name">CTS Open Reader</string>
    <string name="login_app_name">RDT Open Reader</string>
    <string name="covid_patient_profile_symptoms_history">Symptoms and history</string>
    <string name="covid_patient_profile_rdt">RDT</string>
    <string name="covid_patient_profile_sample_collection">Sample collection</string>
    <string name="covid_patient_profile_supporting_investigations">Other clinical data</string>
    <string name="covid_patient_profile_sample_shipments">Shipping preparation</string>
    <string name="covid_patient_forms_tab_name">Patient Forms</string>
    <string name="covid_patient_history_tab_name">Patient History</string>
    <string name="covid_xray">X-Ray</string>
    <string name="covid_wbc">White Blood Cell count</string>
    <string name="no_data_available">No data available</string>
    <string name="covid_barcode_product_id">Product ID</string>
    <string name="covid_barcode_serial_no">Serial Number</string>
    <string name="covid_barcode_additional_id">Additional ID</string>
    <string name="covid_barcode_lot_no">Lot</string>
    <string name="covid_barcode_expiration_date">Expiration Date</string>
    <string name="covid_barcode_is_sensor_triggered">Heat sensor triggered</string>
    <string name="sensor_activated">Status: Sensor Activated</string>
    <string name="sensor_status_ok">Status: OK</string>
    <string name="no_barcode_captured_err">Please capture a barcode to continue!</string>
    <string name="sample_id_prompt">Sample ID:\u0020</string>
    <string name="captured">Captured!</string>
    <string name="manufacturer_name"><![CDATA[<b>Manufacturer:</b>]]></string>
    <string name="rdt_name"><![CDATA[<b>RDT name:</b>]]></string>

    <string-array name="locales_key">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>
    <string-array name="locales_value">
        <item>en</item>
        <item>in</item>
    </string-array>
    <string name="lbl_back">Back</string>
    <string name="lbl_gender_id">Female . ID: 99358357</string>
    <string name="lbl_visit">Visit %d</string>
    <string name="label_continue">CONTINUE</string>
    <string name="str_page_info">Page {0} of {1}</string>
    <string name="json_form_error_msg">Found %d error(s) in the form. Please correct them to submit.</string>
    <string name="json_form_on_next_error_msg">Please correct the error(s) in the form to proceed.</string>
    <string name="onescan_is_not_installed">OneScan app is required to continue this process</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="visit_date_label">Visit Date</string>
    <string name="account_disabled">Session Expired</string>
    <string name="account_disabled_logged_off">Your session has expired. Please login again to continue working.</string>
    <string name="shipping_preparation">Shipping Preparation</string>
</resources>
